content/v1/strutture/1-2-4-all.md
---
slug: 1-2-4-all
title: "1-2-4-All: far parlare tutti in 15 minuti"
meta_description: "Fai emergere idee da tutti in quattro passaggi. Passaggi chiari in 15 minuti per manager e facilitatori."
registro: manuale-operativo
durata: "15 minuti"
difficolta: "Facile"
partecipanti: "illimitato"
fase: "Ideate"
complessita: "Per iniziare subito"
url: "https://liberating.it/structures/1-2-4-all/"
---

# 1-2-4-All

[Home](/) > [Le strutture](/structures/) > 1-2-4-All

**In breve** - Fai emergere idee da tutti in quattro passaggi: da solo, in coppia, in quattro, in plenaria. Nessuno resta fuori.

| Durata | Difficolta' | Gruppo | Fase |
|--------|-------------|--------|------|
| 15 minuti | Facile | illimitato | Ideate |

**Filtri:** [Per iniziare subito](/complessita/iniziare-subito/) · [Facile](/difficolta/facile/) · [Breve (max 45 min)](/durata/breve/) · [Ideate](/design-thinking/ideate/)

## Domanda da portare

- "Quali opportunita' vedi per far progredire questo progetto?"
- "Come gestiresti questa situazione critica?"
- "Quali azioni concrete suggerisci per migliorare il processo?"

## Cosa ti serve

- Spazio per lavorare in coppia e in gruppi da quattro.
- Carta o post-it per annotare (opzionale).
- Timer o campanello per le transizioni.
- Una domanda chiara, preparata prima della riunione.

## I passaggi

1. Poni la domanda al gruppo - 1 min
2. Ognuno riflette in silenzio e annota le proprie idee - 1 min
3. In coppia, condividete e migliorate le idee - 2 min
4. Due coppie si uniscono in un gruppo da quattro e selezionano le idee piu' forti - 4 min
5. Ogni gruppo da quattro condivide un'idea in plenaria (una conversazione alla volta) - 5 min

## Quando usarla

- Dopo una presentazione, quando vuoi raccogliere feedback ricco e non solo silenzio imbarazzato.
- La discussione e' bloccata e parla sempre la stessa persona.
- Devi prendere una decisione e vuoi sentire tutti prima di concludere.

## Il consiglio del facilitatore

Proteggi il silenzio del primo minuto. E' la fase piu' importante: chi di solito non parla in plenaria ha bisogno di quel tempo per pensare. Se qualcuno rompe il silenzio, riporta gentilmente l'attenzione alla domanda.

## Errori da evitare

- Saltare la fase individuale e passare subito alla discussione di gruppo.
- Lasciare che in plenaria si creino due conversazioni parallele.
- Porre una domanda troppo generica ("Cosa ne pensate?") invece di una domanda operativa.

## Prima e dopo

- **Prima:** [Impromptu Networking](/structures/impromptu-networking/) - rompe il ghiaccio prima di raccogliere idee
- **Dopo:** [What, So What, Now What? (W³)](/structures/w3-what-so-what-now-what/) - capire cosa fare delle idee emerse

## Strutture simili

- [4-2-1-Storming](/structures/4-2-1-storming/) - stessa difficolta', converge su un impegno personale
- [25/10 Crowd Sourcing](/structures/25-10-crowd-sourcing/) - prioritizza molte idee in poco tempo

## Prossimo nel percorso

← [Impromptu Networking](/structures/impromptu-networking/) · → [What, So What, Now What? (W³)](/structures/w3-what-so-what-now-what/)

## Torna al catalogo

[Esplora tutte le strutture](/structures/) · [15% Solutions](/structures/15-solutions/)
