content/v2/strutture/1-2-4-all.md
---
slug: 1-2-4-all
title: "1-2-4-All: far parlare tutti in 15 minuti"
meta_description: "Fai emergere idee da tutti in quattro passaggi. Passaggi chiari in 15 minuti per manager e facilitatori."
registro: manuale-operativo
durata: "15 minuti"
difficolta: "Facile"
partecipanti: "illimitato"
fase: "Ideate"
complessita: "Per iniziare subito"
url: "https://liberating.it/structures/1-2-4-all/"
---

# 1-2-4-All

[Home](/) > [Le strutture](/structures/) > 1-2-4-All

**In breve** - 1-2-4-All e' una struttura di facilitazione in quattro passaggi: riflessione individuale, scambio in coppia, discussione in gruppi da quattro, condivisione in plenaria. Fai emergere idee da tutti in 15 minuti.

| Durata | Difficolta' | Gruppo | Fase |
|--------|-------------|--------|------|
| 15 minuti | Facile | illimitato | Ideate |

**Filtri:** [Per iniziare subito](/complessita/iniziare-subito/) · [Facile](/difficolta/facile/) · [Breve (max 45 min)](/durata/breve/) · [Ideate](/design-thinking/ideate/)

## Domanda da portare

- "Quali opportunita' vedi per far progredire questo progetto?"
- "Come gestiresti questa situazione critica?"
- "Quali azioni concrete suggerisci per migliorare il processo?"

## Cosa ti serve

- Spazio per lavoro faccia a faccia in coppie e gruppi da 4.
- Sedie e tavoli opzionali.
- Carta per annotare riflessioni.
- Timer o campanello per le transizioni.
- In remoto: breakout room da 2, poi da 4; chat per appunti individuali; plenaria con una sola conversazione attiva.

## I passaggi

1. Poni la domanda al gruppo - 1 min
2. Ognuno riflette in silenzio e annota le proprie idee - 1 min
3. In coppia, condividete e migliorate le idee - 2 min
4. Due coppie si uniscono in un gruppo da quattro e selezionano le idee piu' forti - 4 min
5. Ogni gruppo da quattro condivide un'idea in plenaria: una conversazione alla volta, niente interruzioni parallele - 5 min

## Quando usarla

- Dopo una presentazione, quando vuoi raccogliere feedback ricco e non solo silenzio imbarazzato.
- La discussione e' bloccata e parla sempre la stessa persona.
- Devi prendere una decisione e vuoi sentire tutti prima di concludere.

## Il consiglio del facilitatore

Proteggi il silenzio del primo minuto. E' la fase piu' importante: chi di solito non parla in plenaria ha bisogno di quel tempo per pensare. In plenaria tieni una sola conversazione attiva: chi vuole intervenire alza la mano o usa la chat, tu dai la parola a turno. Se qualcuno rompe il silenzio nella fase 1, riporta gentilmente l'attenzione alla domanda.

## Errori da evitare

- Saltare la fase individuale e passare subito alla discussione di gruppo.
- Lasciare che in plenaria si creino due conversazioni parallele.
- Porre una domanda troppo generica ("Cosa ne pensate?") invece di una domanda operativa.

## Domande frequenti

### Cos'e' 1-2-4-All?
1-2-4-All e' una struttura di facilitazione in quattro passaggi: riflessione individuale, scambio in coppia, discussione in gruppi da quattro, condivisione in plenaria. Fai emergere idee da tutti in 15 minuti.

### Quanto dura 1-2-4-All?
Di solito 15 minuti. I passaggi prevedono tempi fissi (1 min, 1 min, 2 min, 4 min). Adatta i tempi al tuo gruppo, ma rispetta le transizioni.

### Quando conviene usare 1-2-4-All?
Dopo una presentazione, quando vuoi raccogliere feedback ricco e non solo silenzio imbarazzato.

### Cos'e' il metodo 1-2-4-All?
1-2-4-All e' una struttura di facilitazione in quattro fasi: 1 minuto da solo, 2 in coppia, 4 in gruppo da quattro, 5 in plenaria. Serve a far emergere idee da tutti senza che dominino le voci piu' forti.

### 2 4 1 e 1-2-4-All: e' la stessa cosa?
Si. "2 4 1" e "1 2 4 all" sono varianti di ricerca per lo stesso metodo Liberating Structures: riflessione individuale, coppia, gruppo da quattro, plenaria. I tempi tipici restano 1-2-4-5 minuti.

## Prima e dopo

- **Prima:** [Impromptu Networking](/structures/impromptu-networking/) - rompe il ghiaccio prima di raccogliere idee
- **Dopo:** [What, So What, Now What? (W³)](/structures/w3-what-so-what-now-what/) - capire cosa fare delle idee emerse

## Strutture simili

- [4-2-1-Storming](/structures/4-2-1-storming/) - stessa difficolta', converge su un impegno
- [25/10 Crowd Sourcing](/structures/25-10-crowd-sourcing/) - prioritizza molte idee in poco tempo

## Prossimo nel percorso

← [Impromptu Networking](/structures/impromptu-networking/) · → [What, So What, Now What? (W³)](/structures/w3-what-so-what-now-what/)

## Torna al catalogo

[Esplora tutte le strutture](/structures/) · [15% Solutions](/structures/15-solutions/) - passare dalle idee all'azione
<!--
<script type="application/ld+json">
{
  "@context": "https://schema.org",
  "@type": "FAQPage",
  "mainEntity": [
    {
      "@type": "Question",
      "name": "### Cos'e' 1-2-4-All?",
      "acceptedAnswer": {
        "@type": "Answer",
        "text": "1-2-4-All e' una struttura di facilitazione in quattro passaggi: riflessione individuale, scambio in coppia, discussione in gruppi da quattro, condivisione in plenaria. Fai emergere idee da tutti in 15 minuti."
      }
    },
    {
      "@type": "Question",
      "name": "Quanto dura 1-2-4-All?",
      "acceptedAnswer": {
        "@type": "Answer",
        "text": "Di solito 15 minuti. I passaggi prevedono tempi fissi (1 min, 1 min, 2 min, 4 min). Adatta i tempi al tuo gruppo, ma rispetta le transizioni."
      }
    },
    {
      "@type": "Question",
      "name": "Quando conviene usare 1-2-4-All?",
      "acceptedAnswer": {
        "@type": "Answer",
        "text": "Dopo una presentazione, quando vuoi raccogliere feedback ricco e non solo silenzio imbarazzato."
      }
    },
    {
      "@type": "Question",
      "name": "Cos'e' il metodo 1-2-4-All?",
      "acceptedAnswer": {
        "@type": "Answer",
        "text": "1-2-4-All e' una struttura di facilitazione in quattro fasi: 1 minuto da solo, 2 in coppia, 4 in gruppo da quattro, 5 in plenaria. Serve a far emergere idee da tutti senza che dominino le voci piu' forti."
      }
    }
  ]
}
</script>
-->
